--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "react": "16.4.1",
     "react-dev-utils": "^5.0.1",
     "react-dom": "16.4.1",
+    "react-router-dom": "4.3.1",
     "resolve": "1.6.0",
     "sass-loader": "^8.0.2",
     "style-loader": "0.19.0",
