--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "materialize-css": "^1.0.0-rc.2",
     "autoprefixer": "7.1.6",
     "babel-core": "6.26.0",
     "babel-eslint": "7.2.3",
@@ -36,9 +37,10 @@
     "prop-types": "^15.7.2",
     "radium": "^0.26.0",
     "raf": "3.4.0",
-    "react": "16.4.1",
+    "react": "^16.8.4",
     "react-dev-utils": "^5.0.1",
-    "react-dom": "16.4.1",
+    "react-dom": "^16.8.4",
+    "react-scripts": "2.1.8",
     "react-router-dom": "4.3.1",
     "resolve": "1.6.0",
     "sass-loader": "^8.0.2",
